--- a/portfolio.html
+++ b/portfolio.html
@@ -294,6 +294,26 @@
               </li>
             </ul>
           </div>
+          <div class="form-wrap">
+            <h2 class="title-form-footer">Підпишіться на розсилку</h2>
+            <form name="form-footer" class="form-footer">
+              <label class="footer-label" for="footer-mail"></label>
+              <input
+                class="footer-input"
+                id="footer-mail"
+                type="email"
+                name="person-mail"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="footer-button" data-modal-open>
+                Відправити
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
+
         </div>
       </div>
     </footer>
